# AINameCode

./: .editorconfig  .gitattributes  .gitignore  PROJECT_DEVELOPMENT_DOC.md  README.md
AInameProject/: .env.example  admin_auth.py  alembic.ini  dependencies.py  init_pg_memory.py  main.py  pyproject.toml  rag_worker.py  run.py  test_main.http
AInameProject/alembictable/: env.py
AInameProject/alembictable/versions/: 0f3e9d2c7b11_add_distribution_partners.py  1b9d4e7c2a31_add_community_name_record_link.py  2b7c9f1a4d10_add_admin_system.py  3f4a2c1d9b80_add_open_platform.py  6a1d8e4f9c20_add_partner_commissions.py  7c3a7de4a0f2_add_brand_visual_records.py  8d819f48e26b_v1.py  (+14 more)
AInameProject/core/: api_key.py  mailtools.py  nametools.py  rag_service.py  redisconfig.py  tools.py  workflow.py
AInameProject/docs/: open_platform.md
AInameProject/models/: __init__.py  account.py  admin.py  brand_visual.py  developer.py  growth.py  marketplace.py  name_record.py  user.py
AInameProject/repository/: admin_repo.py  developer_repo.py  user_repo.py
AInameProject/routers/: admin.py  admin_open_platform.py  auth_router.py  brand_visual.py  community.py  developer.py  expert.py  expert_center.py  growth.py  name_router.py  openapi.py  rag_router.py  user_center.py
AInameProject/schemas/: account.py  admin.py  brand_visual.py  developer.py  growth.py  marketplace.py  name_schemas.py  user_schemas.py
AInameProject/services/: admin_service.py  bailian_service.py  invite_service.py  partner_commission_service.py  quota_service.py
AInameProject/settings/: __init__.py
(+67 files in other folders)
